@@ -1,3 +1,12 @@
+2018-03-27  Timothy Hatcher  <timothy@hatcher.name>
+
+        Update my email address in contributors.json and scripts
+        https://bugs.webkit.org/show_bug.cgi?id=184054
+
+        * Scripts/validate-committer-lists:
+        (CommitterListFromGit):
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2018-03-27  Eric Carlson  <eric.carlson@apple.com>
 
         Make AVFoundationEnabled preference available on iOS
